jvm内存模型， 注解的原理及常用注解参数解释， Spring框架的核心原理IOC&AOP